public static class GoalTypes
{
    public const string Simple    = "Simple";
    public const string Eternal   = "Eternal";
    public const string Checklist = "Checklist";
    public const string Negative  = "Negative";
    public const string Streak    = "Streak";
}
