public class SaveData{ 
public int Score { get; set;}
public List<GoalData> Goals { get; set;} = new List<GoalData>();
}