@startuml
skinparam classAttributeIconSize 0
title Eternal Quest updated 
class Program {
  - _manager : GoalManager
  - _fileHandler : GoalFileHandler
  + Main() : static void
  - ShowMenu() : static void
  - CreateGoalMenu() : static void
  - RecordEventMenu(m) : static void
  - SaveMenu() : static void
  - LoadMenu() : static void
}

abstract class Goal {
  # _name : string
  # _description : string
  # _points : int
  + Goal(name : string, description : string, points : int)
  + {abstract} RecordEvent() : int
  + {abstract} IsComplete() : bool
  + virtual GetDetailsString() : string
' Still need these actually, GoalFileHandler needs to be able to access the name, description, and points of a Goal to save it, but I don't want them to be public since they shouldn't be used outside of GoalManager and GoalFileHandler
  + GetName() : string
  + GetDescription() : string
  + GetPoints() : int
}

class SimpleGoal {
  - _isComplete : bool
  + SimpleGoal(name : string, description : string, points : int, isComplete : bool = false)
  + override RecordEvent() : int
  + override IsComplete() : bool
  + override GetDetailsString() : string
}

class EternalGoal {
  - _timesRecorded : int
  + EternalGoal(name : string, description : string, points : int, timesRecorded : int = 0)
  + override RecordEvent() : int
  + override IsComplete() : bool
  + override GetDetailsString() : string
  + GetTimesRecorded() : int
}

class ChecklistGoal {
  - _amountCompleted : int
  - _targetAmount : int
  - _bonus : int
  + ChecklistGoal(name : string, description : string, points : int, targetAmount : int, bonus : int, amountCompleted : int = 0)
  + override RecordEvent() : int
  + override IsComplete() : bool
  + override GetDetailsString() : string
' In need getters for amountCompleted, targetAmount, and bonus to save/load ChecklistGoals, but I don't want them to be public since they shouldn't be used outside of GoalManager and GoalFileHandler
  + GetAmountCompleted() : int
  + GetTargetAmount() : int
  + GetBonus() : int
}

class NegativeGoal {
  - _timesRecorded : int
  - _penalty : int
  + NegativeGoal(name : string, description : string, penalty : int, timesRecorded : int = 0)
  + override RecordEvent() : int
  + override IsComplete() : bool
  + override GetDetailsString() : string
  ' I need getters for timesRecorded and penalty to save/load NegativeGoals, but I don't want them to be public since they shouldn't be used outside of GoalManager and GoalFileHandler
  + GetTimesRecorded() : int
  + GetPenalty() : int
}


class StreakGoal {
  - _currentStreak : int
  - _longestStreak : int
  - _streakBonus : int
  - _requiredStreak : int
  - _lastRecordedDate : DateTime
  + StreakGoal(name : string, description : string, points : int, requiredStreak : int, streakBonus : int, currentStreak : int = 0, longestStreak : int = 0, lastRecordedDate : DateTime = default)
  + override RecordEvent() : int
  + override IsComplete() : bool
  + override GetDetailsString() : string
' I need getters for currentStreak, longestStreak, requiredStreak, streakBonus, and lastRecordedDate to save/load StreakGoals, but I don't want them to be public since they shouldn't be used outside of GoalManager and GoalFileHandler
  + GetCurrentStreak() : int
  + GetLongestStreak() : int
  + GetRequiredStreak() : int
  + GetStreakBonus() : int
  + GetLastRecordedDate() : DateTime
}

class GoalManager {
  - _goals : List~Goal~
  - _score : int
  + GoalManager()
  + AddGoal(goal : Goal) : void
  + GetGoals() : List~Goal~
  + GetScore() : int
  + GetLevel() : int
  + GetPointsToNextLevel() : int
  + DisplayPlayerInfo() : void
  + ListGoalDetails() : void
  + RecordEvent(goalIndex : int) : int
  + SetData(score : int, goals : List~Goal~) : void
}

class GoalFileHandler {
  + Save(filename : string, score : int, goals : List~Goal~) : void
  + Load(filename : string) : tuple of (score : int, goals : List~Goal~)
  - ToData(goal : Goal) : GoalData
  - CreateGoalFromData(data : GoalData) : Goal
}

class SaveData {
  + Score : int
  + Goals : List~GoalData~
}

class GoalTypes <<utility>> {
  + {static} Simple : string = "Simple"
  + {static} Eternal : string = "Eternal"
  + {static} Checklist : string = "Checklist"
  + {static} Streak : string = "Streak"
  + {static} Negative : string = "Negative"
}

class GoalData {
  + Type : string
  + Name : string
  + Description : string
  + Points : int
  + IsComplete : bool
  + AmountCompleted : int
  + TargetAmount : int
  + Bonus : int
  + Penalty : int
  + CurrentStreak : int
  + LongestStreak : int
  + RequiredStreak : int
  + StreakBonus : int
  + LastRecordedDate : DateTime
}


Goal <|-- SimpleGoal
Goal <|-- EternalGoal
Goal <|-- ChecklistGoal
Goal <|-- NegativeGoal
Goal <|-- StreakGoal

GoalManager o-- Goal

Program --> GoalManager
Program --> GoalFileHandler

GoalFileHandler ..> Goal : reads
GoalFileHandler --> GoalData
GoalFileHandler --> SaveData
GoalFileHandler ..> GoalTypes : uses

SaveData o-- GoalData

@enduml